--- a/be/package.json
+++ b/be/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.12.0",
     "order-id": "^2.1.2",
     "sequelize": "^6.37.5",
+    "sharp": "^0.33.5",
     "uuid": "^9.0.0"
   }
 }
